--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@ img#impresoraButton {
       
     </style>
  </head>
+ <body onload="printTicket()">
 
-      <!-- <body onload="window.print()" onfocus="window.close()" -->
-      
-        <!--<button id="whatsappButton">ENVIAR WHATSAPP</button>
-       <!--<button id="Imprimirr">Print</button>-->
+ <!-- Codigo para que se imprima en automatico cuando se abra el ticket -->
+
+
 
 
     <script>
@@ -318,6 +318,8 @@ img#impresoraButton {
      <div class="button-container">
     <!-- Contenedor de botones -->
          <div class="button-box">
+
+  
   <!-- Botón de WhatsApp con ícono -->
   <a href="#" id="impresoraButton">
   <img class="boton" src="Print.png" class="ImganelLogo" width= "60%" id "foto">
@@ -573,6 +575,17 @@ if (currentURL.indexOf('sharelink=1') !== -1) {
     impresoraButton.style.display = 'none';
 }
 </script>
+
+<script>
+    function pprintTicket() {
+      // Simula hacer clic en el botón de impresión
+      document.getElementById("printButton").click();
+      // Imprimir automáticamente
+      window.print();
+      // Cerrar la ventana después de imprimir
+      window.close();
+    }
+  </script>
 
 </body>
 </html>
