--- a/index.html
+++ b/index.html
@@ -577,16 +577,16 @@ if (currentURL.indexOf('sharelink=1') !== -1) {
 </script>
 
 <script>
-    function pprintTicket() {
+    ////function pprintTicket() {
       // Simula hacer clic en el botón de impresión
-      document.getElementById("printButton").click();
+     // document.getElementById("printButton").click();
     }
 
     // Función que se ejecuta después de la impresión
-    window.onafterprint = function() {
+   // window.onafterprint = function() {
       // Cerrar la ventana después de imprimir
-      window.close();
-    };
+     // window.close();
+    //};
 
 
   </script>
